front: another fix for heading padding overlapping

--- a/frontend/global/scss/_content.scss
+++ b/frontend/global/scss/_content.scss
@@ -42,7 +42,7 @@ h1, .heading-plugin--h1 {
 }
 
 * {
-    z-index: 1;
+    z-index: auto;
 }
 
 @mixin header-style($tag, $font-size, $margin-top) {
@@ -53,7 +53,7 @@ h1, .heading-plugin--h1 {
         margin-top: -$offset;
         padding-top: $offset + $margin-top - $margin-bottom-global;
         font-size: $font-size;
-        z-index: 0;
+        z-index: -1;
     }
     #{$tag}:first-child, .heading-plugin--#{$tag}:first-child {
         padding-top: $offset + $margin-top;
